<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.fenix.spirometer.ui.widget.CustomPreference
        android:inputType="number"
        app:content_type="edit"
        app:key="setUserId"
        app:necessary="true"
        app:title="@string/operator_user_id" />
    <com.fenix.spirometer.ui.widget.CustomPreference
        android:inputType="text"
        app:content_type="edit"
        app:key="setPassword"
        app:necessary="true"
        app:title="@string/operator_password" />
    <com.fenix.spirometer.ui.widget.CustomPreference
        android:inputType="text"
        app:content_type="edit"
        app:key="setDisplayName"
        app:necessary="true"
        app:title="@string/operator_display_name" />
    <com.fenix.spirometer.ui.widget.CustomPreference
        android:inputType="text"
        app:content_type="edit"
        app:key="setDuty"
        app:necessary="true"
        app:title="@string/operator_duty" />
    <com.fenix.spirometer.ui.widget.CustomPreference
        android:inputType="textMultiLine"
        app:content_type="edit"
        app:key="setDescription"
        app:title="@string/operator_description" />
</PreferenceScreen>